--- a/basses.html
+++ b/basses.html
@@ -29,7 +29,7 @@
       <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
           <!--Logo connected to index page-->
           <a class="navbar-brand" href="index.html">
-            <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height: 50">
+            <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height:50px">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -69,16 +69,16 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
-                <div id="centre_heading"><h1>Basses</h1></div>
+                <div class="centre_heading"><h1>Basses</h1></div>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-                <div id="centre_heading"><h2>Please Contact us for avaliability and a test time</h2></div>
+                <div class="centre_heading"><h2>Please Contact us for avaliability and a test time</h2></div>
             </div>
           </div>
           <!--Break in the code to add space between things-->
-          <br></br>
+          <br>
           <div class="row">
             <!--First Product in page-->
             <!--Using card code for the image whilst a table for the information-->
@@ -136,7 +136,7 @@
               </div>
           </div>
           <!--Break in the code to add space between things-->
-          <br></br>
+          <br>
           <!--Repeat of first product code, tailered to next product-->
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -190,7 +190,7 @@
               </div>
           </div>
           <!--Break in the code to add space between things-->
-          <br></br>
+          <br>
           <!--Repeat of first product code, tailered to next product-->
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -244,7 +244,7 @@
               </div>
           </div>
           <!--Break in the code to add space between things-->
-          <br></br>
+          <br>
           <!--Repeat of first product code, tailered to next product-->
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -298,7 +298,7 @@
               </div>
           </div>
           <!--Break in the code to add space between things-->
-          <br></br>
+          <br>
           <!--Repeat of first product code, tailered to next product-->
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -353,7 +353,7 @@
           </div>
         </div>
         <!--Break in the code to add space between things-->
-        <br></br>
+        <br>
 
         <!--Button to go to the top of the page, Button name: top-->
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
@@ -393,20 +393,20 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <h5>Company Info</h5>
                 <ul>
-                  <li><a href="index.html">Index</li></a>
+                  <li><a href="index.html">Index</a></li>
                   <li>About us</li>
                   <li>Privacy</li>
-                  <li><a href="contact_us.html">Contact Us</li></a>
+                  <li><a href="contact_us.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <h5>Products</h5>
                 <ul>
-                  <li><a href="pianos.html">Pianos</li></a>
-                  <li><a href="guitars.html">Guitars</li></a>
-                  <li><a href="basses.html">Basses</li></a>
-                  <li><a href="drums_percussions.html">Drums and Percussion</li></a>
-                  <li><a href="sound.html">Sound Products</li></a>
+                  <li><a href="pianos.html">Pianos</a></li>
+                  <li><a href="guitars.html">Guitars</a></li>
+                  <li><a href="basses.html">Basses</a></li>
+                  <li><a href="drums_percussions.html">Drums and Percussion</a></li>
+                  <li><a href="sound.html">Sound Products</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
@@ -417,7 +417,8 @@
                 <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
                 <a href="https://www.youtube.com/" target="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
             </div>
-        </footer> 
+          </div>
+        </div> 
       </body>
 
 </html>
