--- a/contact_us.html
+++ b/contact_us.html
@@ -29,7 +29,7 @@
       <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
           <!--Logo connected to index page-->
           <a class="navbar-brand" href="index.html">
-            <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height: 50">
+            <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height:50px">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -69,20 +69,20 @@
         <div class="container-fluid">
             <div class="row">
               <div class="col-12">
-                  <div id="centre_heading"><h1>Contact Us</h1></div>
+                  <div class="centre_heading"><h1>Contact Us</h1></div>
               </div>
             </div>
-            <br></br>
+            <br>
             <!--interactive map-->
             <div class="row">
               <div class="col-12">
                 <div class="Map">
-                  <iframe width="100%" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJD0Nh8eFIDW0Rixm5PJRuOdQ&key=AIzaSyBj9ojPqPcjOUAUsdF-tqXNKe8Wld3GfP8"></iframe>
+                  <iframe width="1460" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJD0Nh8eFIDW0Rixm5PJRuOdQ&key=AIzaSyBj9ojPqPcjOUAUsdF-tqXNKe8Wld3GfP8"></iframe>
                 </div>
               </div>
             </div>
             <!--Break in the code to add space between things-->
-            <br></br>
+            <br>
             <!--contact us details-->
             <div class="row">
               <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -122,16 +122,15 @@
                 </table>
               </div>
             </div>
-            <br></br>
+            <br>
             <div class="row">
               <div class="col-12">
-                <div id="centre_heading"><h2>Please enjoy these videos by Sancta Maria College who have bought instruments from us</h2></div>
+                <div class="centre_heading"><h2>Please enjoy these videos by Sancta Maria College who have bought instruments from us</h2></div>
                 </div>
               </div>
             </div>
-        </div>
         <!--Break in the code to add space between things-->
-        <br></br>
+        <br>
             <!-- Container for the image gallery -->
             <!--uses container code-->
             <!--has main width videos and thumbnails with screen shot on them linked to video-->
@@ -214,6 +213,9 @@
                 </div>
             </div>
         
+        <!--Break in the code to add space between things-->
+        <br>
+        
         <!--script for the video gallery-->
         <script>
           let slideIndex = 1;
@@ -286,20 +288,20 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <h5>Company Info</h5>
                 <ul>
-                  <li><a href="index.html">Index</li></a>
+                  <li><a href="index.html">Index</a></li>
                   <li>About us</li>
                   <li>Privacy</li>
-                  <li><a href="contact_us.html">Contact Us</li></a>
+                  <li><a href="contact_us.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <h5>Products</h5>
                 <ul>
-                  <li><a href="pianos.html">Pianos</li></a>
-                  <li><a href="guitars.html">Guitars</li></a>
-                  <li><a href="basses.html">Basses</li></a>
-                  <li><a href="drums_percussions.html">Drums and Percussion</li></a>
-                  <li><a href="sound.html">Sound Products</li></a>
+                  <li><a href="pianos.html">Pianos</a></li>
+                  <li><a href="guitars.html">Guitars</a></li>
+                  <li><a href="basses.html">Basses</a></li>
+                  <li><a href="drums_percussions.html">Drums and Percussion</a></li>
+                  <li><a href="sound.html">Sound Products</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
@@ -310,7 +312,8 @@
                 <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
                 <a href="https://www.youtube.com/" target="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
             </div>
-        </footer> 
+          </div>
+        </div> 
       </body>
 
 </html>
