--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
             <!--Logo connected to index page-->
             <a class="navbar-brand" href="index.html">
-              <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height: 50">
+              <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height:50px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
               <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
-                <div id="centre_heading"><h1>Massive Sale</h1></div>
+                <div class="centre_heading"><h1>Massive Sale</h1></div>
             </div>
           </div>
         </div>
@@ -155,11 +155,9 @@
                 </a>
               
               </div>
-            </div>
-          </div>
         </div>
         <!--Break in the code to add space between things-->
-        <br></br>
+        <br>
         <!--Second Container in the Index Page-->
         <!--Set to fluid to stretch information to edge of the page without having overflow-->
         <!--Contains Information text, quote from the bible and cards to different pages of the website-->
@@ -167,18 +165,18 @@
           <div class="row">
             <div class="col-12">
               <!--Two Headings, One which welcomes them to the store, the other a bible quote about music-->
-              <div id="centre_heading"><h2>Welcome to our store. We Hope you like our products.</h2></div>
-              <div id="centre_quote"><p>"Make a joyful noise unto the Lord, all the earth: make a loud noise, and rejoice, and sing praise. Sing unto the Lord with the harp; with the harp, and the voice of a psalm. With trumpets and sound of cornet make a joyful noise before the Lord, the King." (Psalm 98:4-6)</p></div>  
+              <div class="centre_heading"><h2>Welcome to our store. We Hope you like our products.</h2></div>
+              <div class="centre_quote"><p>"Make a joyful noise unto the Lord, all the earth: make a loud noise, and rejoice, and sing praise. Sing unto the Lord with the harp; with the harp, and the voice of a psalm. With trumpets and sound of cornet make a joyful noise before the Lord, the King." (Psalm 98:4-6)</p></div>  
             </div>
           </div>
           <div class="row">
             <div class="col-12">
               <!--Another heading, this one states what we offer-->
-              <div id="centre_heading"><h2>What we offer</h2></div>
+              <div class="centre_heading"><h2>What we offer</h2></div>
             </div>
           </div>
           <!--Break in the code to add space between things-->
-          <br></br>
+          <br>
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <!--First card to lead to product pages-->
@@ -313,20 +311,20 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <h5>Company Info</h5>
                 <ul>
-                  <li><a href="index.html">Index</li></a>
+                  <li><a href="index.html">Index</a></li>
                   <li>About us</li>
                   <li>Privacy</li>
-                  <li><a href="contact_us.html">Contact Us</li></a>
+                  <li><a href="contact_us.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <h5>Products</h5>
                 <ul>
-                  <li><a href="pianos.html">Pianos</li></a>
-                  <li><a href="guitars.html">Guitars</li></a>
-                  <li><a href="basses.html">Basses</li></a>
-                  <li><a href="drums_percussions.html">Drums and Percussion</li></a>
-                  <li><a href="sound.html">Sound Products</li></a>
+                  <li><a href="pianos.html">Pianos</a></li>
+                  <li><a href="guitars.html">Guitars</a></li>
+                  <li><a href="basses.html">Basses</a></li>
+                  <li><a href="drums_percussions.html">Drums and Percussion</a></li>
+                  <li><a href="sound.html">Sound Products</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
@@ -337,7 +335,8 @@
                 <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
                 <a href="https://www.youtube.com/" target="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
             </div>
-        </footer> 
+          </div>
+        </div>
       </body>
 
 </html>
