--- a/accessories.html
+++ b/accessories.html
@@ -77,7 +77,7 @@
           <div class="row">
             <!--Row containing 4 different products-->
             <!--Using Card to show all information-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
                 <div class="card-2 mb-4">
                     <!--First Image connected to the card with alt tag-->
                     <img class="card-img-top-2" src="images/accessories/boss_chorus_pedal.jpg" alt="Boss Chorus Pedal">
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/fender_reverb_pedal.jpg" alt="Fender Reverb Pedal">
                   <div class="card-body">
@@ -104,7 +104,7 @@
               </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/boss_foot_volume_pedal.jpg" alt="Boss Volume Pedal">
                   <div class="card-body">
@@ -116,7 +116,7 @@
               </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/vox_wha_wha_pedal.jpg" alt="Vox Wha Wha Pedal">
                   <div class="card-body">
@@ -133,7 +133,7 @@
           <!--next row of products-->
           <div class="row">
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/9m_balanced_xlr_cable.jpg" alt="9M Balanced XLR Cable">
                     <div class="card-body">
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/15m_balanced_xlr_cable.jpg" alt="15M Balanced XLR Cable">
                   <div class="card-body">
@@ -157,7 +157,7 @@
               </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/3m_fender_guitar_jack.jpg" alt="3M Fender Guitar Cable">
                   <div class="card-body">
@@ -169,7 +169,7 @@
               </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/5.5m_fender_guitar_jack.jpg" alt="5.5M Fender Guitar Cable">
                   <div class="card-body">
@@ -186,7 +186,7 @@
           <!--next row of products-->
           <div class="row">
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/1.5m_red_white_cable.jpg" alt="1.5M Red and White Audio Cable">
                     <div class="card-body">
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/artist_aframe_guitar_stand.jpg" alt="Artist Aframe Guitar Stand">
                   <div class="card-body">
@@ -210,7 +210,7 @@
               </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <<div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/boom_microphone_stand_3axis.jpg" alt="Boom Microphone Stand">
                   <div class="card-body">
@@ -222,7 +222,7 @@
               </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/orchestral_music_stand.jpg" alt="Orchestral Music Stand">
                   <div class="card-body">
@@ -239,7 +239,7 @@
           <!--next row of products-->
           <div class="row">
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/akg_p170_small_condenser.jpg" alt="AKG P170 Small Condenser">
                     <div class="card-body">
@@ -251,7 +251,7 @@
                 </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/shure_ksm137_pair_condensers.jpg" alt="Shure KSM137 Pair Condensers">
                   <div class="card-body">
@@ -263,7 +263,7 @@
               </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/shure_vocal_cardioid_mic.jpg" alt="Shure Vocal Cardioid Mic">
                   <div class="card-body">
@@ -275,7 +275,7 @@
               </div>
             </div>
             <!--Repeat of first product code, tailered to next product-->
-            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/sennheiser_e_845_vocal.jpg" alt="Sennheiser E845 Vocal Mic">
                   <div class="card-body">
