--- a/contact_us.html
+++ b/contact_us.html
@@ -77,7 +77,7 @@
             <div class="row">
               <div class="col-12">
                 <div class="Map">
-                  <iframe width="1460" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJD0Nh8eFIDW0Rixm5PJRuOdQ&key=AIzaSyBj9ojPqPcjOUAUsdF-tqXNKe8Wld3GfP8"></iframe>
+                  <iframe width="100%" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJD0Nh8eFIDW0Rixm5PJRuOdQ&key=AIzaSyBj9ojPqPcjOUAUsdF-tqXNKe8Wld3GfP8"></iframe>
                 </div>
               </div>
             </div>
